tests/reference/asr-test_optional-97e5371.stderr
semantic error: The type 'Optional' is undeclared.
 --> tests/errors/test_optional.py:1:39
  |
1 | def match(pat : str, string : str) -> Optional[list[str] | str]:
  |                                       ^^^^^^^^^^^^^^^^^^^^^^^^^ 


Note: Please report unclear or confusing messages as bugs at
https://github.com/lcompilers/lpython/issues.
